k8s/ldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openldap
  name: openldap
  namespace: textscope
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
      - name: openldap
        image: docker.lomin.ai/ts-openldap:0.1.12
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 389
          protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/ldap
            name: openldap-pv
      volumes:
        - name: openldap-pv
          persistentVolumeClaim:
            claimName: openldap-data-pvc
  selector:
    matchLabels:
      app: openldap
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: textscope
  labels:
    app: openldap
spec:
  selector:
    app: openldap
  ports:
    - protocol: TCP
      port: 389
      targetPort: 389
      name: http
  type: LoadBalancer
